--- a/app/views/up_on_browser/upload_page.html.erb
+++ b/app/views/up_on_browser/upload_page.html.erb
@@ -1,33 +1,64 @@
 <%= form_for @item, :url => {:action => :create} do |f| %>
-<h1> Upload Page!!</h1>
-  <div class="field">
-    <%= f.label :i_name, "Item Name" %>
-    <%= f.text_field :i_name %>
-  </div>
-  <br>
-  <div class="field">
-    <%= f.label :category, "Category" %>
-    <%= f.text_field :category %>
-  </div>
-  <br>
-  <div class="field">
-    <%= f.label :e_key, "Event Key" %>
-    <%= f.text_field :e_key %>
-  </div>
-  <br>
-  <div class="field">
-    <%= f.label :i_detail, "Item detail" %>
-    <%= f.text_area :i_detail, :cols => 35, :rows=> 8 %>
-  </div>
-  <br>
-  <div class="field">
-    <%= f.label :pic_data, "Picture" %>
-    <%= f.file_field :pic_data,accept: "image/jpeg" %>
-  </div>
-  <br>
-  <div class="actions">
-    <%= f.submit "SEND!!" %>
+	<h1> Upload Page</h1>
+
+  <div class="bs-docs-section">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="page-header">
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-6">
+        <div class="well bs-component">
+          <form class="form-horizontal">
+            <fieldset>
+              <div class="form-group">
+                <div class="col-lg-10">
+   								<%= f.label :i_name, " Item Name" %>							
+									<%= f.text_field :i_name %>
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-lg-10">
+							    <%= f.label :category, "Category" %>
+							    <%= f.text_field :category %>
+                </div>
+              </div>
+							<div class="form-group">
+								<div class="col-lg-10">	
+   								 <%= f.label :e_key, "Event Key" %>
+    							 <%= f.text_field :e_key %>
+								</div>
+							</div>
+
+              <div class="form-group">
+                <div class="col-lg-10">
+  							  <%= f.label :i_detail, "Item Detail" %>
+    							<%= f.text_area :i_detail, :cols => 35, :rows=> 8 %>
+                </div>
+              </div>
+              <div class="form-group">
+						    <%= f.label :pic_data, "Picture" %>
+   						  <%= f.file_field :pic_data,accept: "image/jpeg" %>
+							</div>
+							<div class="form-group">
+                <div class="col-lg-10 col-lg-offset-2">
+                  <button type="reset" class="btn btn-default">Reset</button>
+                  <button type="submit" class="btn btn-primary">Send</button>
+                </div>
+              </div>
+            </fieldset>
+          </form>
+
+					</div>
+							<div class="form-group">
+								<p class="bs-component">							
+									<a href="/home/items" class="btn btn-warning">ITEMS PAGE </a>
+								</p>
+							</div>
+				</div>
   </div>
 <% end %>
 <br>
-<input type="button" onclick="location.href='/home/items'"value="ITEMS PAGE">
